// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateSCAPPolicy expect to render without error 1`] = `
<Fragment>
  <TextContent>
    <Text
      className="pf-u-mb-md"
      component="h1"
    >
      Create SCAP policy
    </Text>
    <Text
      className="pf-u-mb-md"
    >
      Select the operating system and policy type for this policy.
    </Text>
  </TextContent>
  <Form>
    <FormGroup
      fieldId="benchmark"
      isRequired={true}
      label="Operating system"
    />
    <FormGroup
      fieldId="policy-type"
      isRequired={true}
      label="Policy type"
      labelIcon={<PolicyTooltip />}
    >
      <ProfileTypeSelect
        onClick={[Function]}
        profiles={Array []}
      />
    </FormGroup>
  </Form>
</Fragment>
`;

exports[`CreateSCAPPolicy should render a spinner while loading 1`] = `<Spinner />`;

exports[`CreateSCAPPolicy should render benchmarks and no policies until one is selected 1`] = `
<Fragment>
  <TextContent>
    <Text
      className="pf-u-mb-md"
      component="h1"
    >
      Create SCAP policy
    </Text>
    <Text
      className="pf-u-mb-md"
    >
      Select the operating system and policy type for this policy.
    </Text>
  </TextContent>
  <Form>
    <FormGroup
      fieldId="benchmark"
      isRequired={true}
      label="Operating system"
    >
      <Button
        className="wizard-os-button "
        key="a5e7f1ea-e63c-40be-a17a-c2a247c11e10"
        onClick={[Function]}
        variant="tertiary"
      >
        RHEL 6
      </Button>
      <Button
        className="wizard-os-button "
        key="f1dff140-6649-4060-b0f6-7b1548f9e901"
        onClick={[Function]}
        variant="tertiary"
      >
        RHEL 7
      </Button>
      <Button
        className="wizard-os-button "
        key="bdcc6b37-1d4a-489a-a38d-e9be7aef7051"
        onClick={[Function]}
        variant="tertiary"
      >
        RHEL 7
      </Button>
      <Button
        className="wizard-os-button "
        key="6a02b217-c9e9-4a4d-93a9-c77b5ea7967a"
        onClick={[Function]}
        variant="tertiary"
      >
        RHEL 8
      </Button>
    </FormGroup>
    <FormGroup
      fieldId="policy-type"
      isRequired={true}
      label="Policy type"
      labelIcon={<PolicyTooltip />}
    >
      <ProfileTypeSelect
        onClick={[Function]}
        profiles={Array []}
      />
    </FormGroup>
  </Form>
</Fragment>
`;

exports[`CreateSCAPPolicy should render policies from the selected benchmark only 1`] = `
Array [
  <button
    aria-disabled={false}
    aria-label={null}
    className="pf-c-button pf-m-tertiary wizard-os-button "
    data-ouia-component-id="OUIA-Generated-Button-tertiary-1"
    data-ouia-component-type="PF4/Button"
    data-ouia-safe={true}
    disabled={false}
    onClick={[Function]}
    role={null}
    type="button"
  >
    RHEL 6
  </button>,
  <button
    aria-disabled={false}
    aria-label={null}
    className="pf-c-button pf-m-tertiary wizard-os-button "
    data-ouia-component-id="OUIA-Generated-Button-tertiary-2"
    data-ouia-component-type="PF4/Button"
    data-ouia-safe={true}
    disabled={false}
    onClick={[Function]}
    role={null}
    type="button"
  >
    RHEL 7
  </button>,
  <button
    aria-disabled={false}
    aria-label={null}
    className="pf-c-button pf-m-tertiary wizard-os-button "
    data-ouia-component-id="OUIA-Generated-Button-tertiary-3"
    data-ouia-component-type="PF4/Button"
    data-ouia-safe={true}
    disabled={false}
    onClick={[Function]}
    role={null}
    type="button"
  >
    RHEL 7
  </button>,
  <button
    aria-disabled={false}
    aria-label={null}
    className="pf-c-button pf-m-tertiary wizard-os-button "
    data-ouia-component-id="OUIA-Generated-Button-tertiary-4"
    data-ouia-component-type="PF4/Button"
    data-ouia-safe={true}
    disabled={false}
    onClick={[Function]}
    role={null}
    type="button"
  >
    RHEL 8
  </button>,
]
`;

exports[`CreateSCAPPolicy should render policies from the selected benchmark only 2`] = `
<ProfileTypeSelect
  onClick={[Function]}
  profiles={Array []}
/>
`;
